[gd_scene load_steps=6 format=3 uid="uid://bupmbau5r1ld6"]

[ext_resource type="Shader" path="res://materials_shaders/shine_highlight.gdshader" id="1_5cx53"]
[ext_resource type="Script" path="res://arcana.gd" id="1_l6xmp"]
[ext_resource type="Script" path="res://arcana_resource.gd" id="2_lblht"]
[ext_resource type="Texture2D" uid="uid://digftfaphe850" path="res://assets/tiles/00000.png" id="3_db8ck"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yi8ln"]
resource_local_to_scene = true
shader = ExtResource("1_5cx53")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 5.0
shader_parameter/shine_size = 0.01
shader_parameter/active = false

[node name="Arcana" type="MarginContainer"]
custom_minimum_size = Vector2(150, 200)
script = ExtResource("1_l6xmp")
stats = ExtResource("2_lblht")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.211765, 0.211765, 0.211765, 1)

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_yi8ln")
layout_mode = 2
texture = ExtResource("3_db8ck")
expand_mode = 1
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "xxxxx"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MinorSpellButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Minor Spell"

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MinorSpellButton" to="." method="_on_minor_spell_button_pressed"]
